# pyquickshare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.py  pyproject.toml  tinkering.py
.github/workflows/: ruff.yml  test.yml
docs/: api.md  conf.py  index.md  internals.md
pyquickshare/: __init__.py  backend.py  bluetooth.py  common.py  connection.py  errors.py  facts.py  firewalld.py  mdns.py  qrcode.py  receive.py  results.py  send.py  ukey2.py
pyquickshare/dbus/: __init__.py  bluetooth.py  bluez.py  dbus.py  firewalld.py  p2p.py  untyped.py
pyquickshare/mdns/: __init__.py  receive.py  send.py
pyquickshare/protos/: __init__.py  device_to_device_messages_pb2.py  device_to_device_messages_pb2.pyi  offline_wire_formats_pb2.py  offline_wire_formats_pb2.pyi  securegcm_pb2.py  securegcm_pb2.pyi  securemessage_pb2.py  securemessage_pb2.pyi  sharing_enums_pb2.py  sharing_enums_pb2.pyi  ukey_pb2.py  ukey_pb2.pyi  wire_format_pb2.py  wire_format_pb2.pyi
pyquickshare/protos/location/nearby/connections/: __init__.py
pyquickshare/protos/location/nearby/proto/sharing/: __init__.py
pyquickshare/protos/nearby/sharing/service/proto/: __init__.py
pyquickshare/protos/securegcm/: __init__.py
pyquickshare/protos/securemessage/: __init__.py
pyquickshare/rfcomm/: __init__.py  _rfcomm.cpp  _rfcomm.pyi
tests/: test_client_server.py
