[project]
name = "pyquickshare"
version = "0.1.0"
description = ""
authors = [{ name = "teaishealthy", email = "teaishealthy@protonmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "bless>=0.2.6",
    "cryptography>=42.0.8",
    "dbus-next>=0.2.3",
    "protobuf>=5.26.1",
    "python-magic>=0.4.27",
    "zeroconf>=0.143.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.3,<0.5",
]

[tool.coverage.run]
omit = ["pyquickshare/protos/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
