[project]
name = "pyquickshare"
version = "0.1.0"
description = ""
authors = [{ name = "teaishealthy", email = "teaishealthy@protonmail.com" }]
requires-python = "~=3.10.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiofile>=3.9.0",
    "bless>=0.2.6",
    "cryptography>=44.0.1",
    "dbus-next>=0.2.3",
    "protobuf>=5.29.3",
    "python-magic>=0.4.27",
    "zeroconf>=0.145.1",

    # need to pin bleak (dependency of bless)
    "bleak==0.22.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.7",
]
docs = ["furo>=2024.8.6", "myst-parser>=4.0.1", "sphinx>=8.1.3"]

[tool.ruff]
include = ["pyquickshare/*"]
exclude = ["pyquickshare/protos/*", "docs/*"]
line-length = 100


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A001",   # variable shadowing a built-in
    "A002",   # argument shadowing a built-in
    "ANN401", # no Any

    "TC006", # runtime-cast-value, i think it looks bad

    "TD002",
    "TD003",
    "FIX002",

    "TID252", # i really dislike absolute imports

    # these are disabled because i can't configure what 'public' means
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D107", # missing docstring in __init__

    # disabled because of `ruff format`
    "COM812",
    "ISC001",
]


[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".


[tool.coverage.run]
omit = ["pyquickshare/protos/*"]

[tool.coverage.report]
exclude_also = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
